[package]
name = "picolayer"
version = "0.1.0"
edition = "2024"
authors = ["skevetter"]
description = "A package installer and script runner that ensures minimal container layers"
license = "MIT"
repository = "https://github.com/skevetter/picolayer"

[features]
default = ["pkgx-integration"]
pkgx-integration = ["libpkgx", "tokio", "rusqlite", "indicatif"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.4"
hex = "0.4.3"
pgp = "0.17.0"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
walkdir = "2.5.0"
libpkgx = { version = "0.7.0", optional = true }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"], optional = true }
rusqlite = { version = "0.33.0", optional = true }
indicatif = { version = "0.17", optional = true }
dirs-next = "2.0.0"
