[package]
name = "picolayer"
version = "0.1.0"
edition = "2024"
authors = ["skevetter"]
description = "A package installer and script runner that ensures minimal container layers"
license = "MIT"
repository = "https://github.com/skevetter/picolayer"

[features]
default = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dirs-next = "2.0.0"
env = "1.0.1"
flate2 = "1.1.4"
hex = "0.4.3"
indicatif = { version = "0.17" }
libpkgx = { version = "0.7.0" }
pgp = "0.17.0"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls-webpki-roots"], default-features = false }
rusqlite = { version = "0.33.0" }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
walkdir = "2.5.0"
xz = "0.1.0"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
