[package]
name = "picolayer"
version = "0.1.0"
edition = "2024"
authors = ["skevetter"]
description = "A package installer and script runner that ensures minimal container layers"
license = "MIT"
repository = "https://github.com/skevetter/picolayer"

[features]
default = []
oci-distribution = ["dep:oci-client"]

[package.metadata.cargo-machete]
ignored = ["openssl", "oci-client"]

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21.5"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dirs-next = "2.0.0"
env = "1.0.1"
env_logger = "0.11"
flate2 = "1.1.4"
hex = "0.4.3"
hostname = "0.4.0"
indicatif = { version = "0.17" }
libpkgx = { version = "0.7.0" }
log = "0.4"
oci-client = { version = "0.15.0", optional = true }
openssl = { version = "0.10", features = ["vendored"] }
pgp = "0.17.0"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = [
    "blocking",
    "json",
    "rustls-tls-webpki-roots",
], default-features = false }
rusqlite = { version = "0.33.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
xz = "0.1.0"

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
